Hero too low bug

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .hero {
-    padding: 25rem 0 25rem 0;
+    padding: 20rem 0 25rem 0;
     margin: 0;
 
 }
